--- a/index.html
+++ b/index.html
@@ -810,119 +810,122 @@
         background-color: rgba(255, 255, 255, 0.1);
     }
 
-        #desktopToadsGrid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 6 columns for 12 toads (2 rows) for even spacing */
-            gap: 2px;
-            width: 100%;
-            height: 100%; /* Fill parent box */
-            align-content: start; /* Align to content start for tablet */
-        }
-
-        #desktopToadsGrid .hopped-toad {
-            width: 80%; /* Adjust toad size within grid cell */
-            height: auto;
-            margin: auto;
-        }
-
-        .hero-nav-col {
-            grid-area: nav;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            flex-grow: 1;
-            width: 100%;
-            max-width: none;
-            margin: 0;
-            padding: 0;
-            margin-top: 0px;
-        }
-        .hero-nav-title {
-            font-size: 2.5rem; /* Adjust title size */
-            -webkit-text-stroke: 1.5px #000;
-            text-stroke: 1.5px #000;
-            margin-bottom: 8px;
-            line-height: 1;
-        }
-        .hero-nav-subtitle {
-            font-size: 2.5rem; /* Adjust subtitle size */
-            margin-bottom: 18px;
-            margin-top: 0;
-            line-height: 1.2;
-        }
-
-        .main-links {
-            /* Keep as flex row for tablet, but align right */
-            position: static; /* IMPORTANT: Remove absolute positioning */
-            top: auto;
-            left: auto;
-            width: auto;
-            min-width: unset;
-            max-height: unset; /* Remove these overrides from mobile */
-            overflow: visible;
-            transition: none;
-            display: flex;
-            flex-direction: row; /* Keep as row */
-            flex-wrap: wrap; /* Allow wrapping */
-            justify-content: flex-end; /* Align to the right */
-            gap: 10px; /* Adjust gap for tablet */
-            background-color: transparent; /* Remove background */
-            padding-bottom: 0;
-            z-index: auto;
-        }
-        .main-links a {
-            padding: 8px 15px; /* Adjust button padding */
-            font-size: 0.9rem;
-            border: 3px solid #181818; /* Adjust border thickness */
-            margin: 0;
-        }
-        .main-links .icon {
-            width: 1.5em; /* Adjust icon size */
-            height: 1.5em;
-            min-width: 1.5em;
-            min-height: 1.5em;
-        }
-
-
-        #collectedToadsBox {
-            display: none; /* Hide the mobile specific toad box */
-        }
-
-        /* Hide separators on tablet as well if not needed */
-        .nav-hero-separator, .banner-hero-separator {
-            display: none !important;
-            height: 0 !important;
-            margin: 0 !important;
-            padding: 0 !important;
-        }
-        .desktop-banner-container {
-            display: block; /* Show desktop banner images */
-        }
-        .mobile-banner-container {
-            display: none; /* Hide mobile banner */
-        }
-
-        .hero-image-row {
-            flex-direction: row; /* Keep as row for tablet */
-        }
-        .hero-image-box {
-            width: auto; /* Allow flexbox to size */
-            margin-left: 20px;
-            margin: 0; /* Remove auto margins */
-        }
-        .gallery-grid {
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Adjust minmax for tablet gallery */
-            gap: 20px;
-            padding: 30px 5vw 40px 5vw;
-        }
-        .footer-social-links {
-            flex-direction: row; /* Keep as row */
-            gap: 16px;
-        }
-        .footer-social-link {
-            font-size: 0.9rem;
-        }
+    #desktopToadsGrid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr); /* 4 columns for toads */
+        gap: 2px;
+        width: 100%;
+        height: 100%; /* Fill parent box */
+        align-content: start; /* Align to content start for tablet */
     }
+
+    #desktopToadsGrid .hopped-toad {
+        width: 80%; /* Adjust toad size within grid cell */
+        height: auto;
+        margin: auto;
+    }
+
+    .hero-nav-col {
+        grid-area: nav; /* Assign to the 'nav' area */
+        display: flex;
+        flex-direction: column; /* Keep column for titles and then links */
+        align-items: flex-end; /* Align title/subtitle and links to the right */
+        flex-grow: 1;
+        width: 100%;
+        max-width: none;
+        margin: 0;
+        padding: 0;
+        margin-top: 0;
+    }
+    .hero-nav-title {
+        font-size: 2.5rem;
+        -webkit-text-stroke: 1.5px #000;
+        text-stroke: 1.5px #000;
+        margin-bottom: 8px;
+        line-height: 1;
+    }
+    .hero-nav-subtitle {
+        font-size: 2.5rem;
+        margin-bottom: 18px;
+        margin-top: 0;
+        line-height: 1.2;
+    }
+
+    .main-links {
+        position: static;
+        top: auto;
+        left: auto;
+        width: auto;
+        min-width: unset;
+        max-height: unset;
+        overflow: visible;
+        transition: none;
+        display: flex;
+        flex-direction: row; /* Make links horizontal for tablet */
+        flex-wrap: wrap; /* Allow wrapping if screen gets too narrow */
+        justify-content: flex-end; /* Align links to the right */
+        gap: 10px; /* Adjust gap for tablet */
+        background-color: transparent;
+        padding-bottom: 0;
+        z-index: auto;
+    }
+    .main-links a {
+        padding: 8px 15px;
+        font-size: 0.9rem;
+        border: 3px solid #181818;
+        margin: 0;
+    }
+    .main-links .icon {
+        width: 1.5em;
+        height: 1.5em;
+        min-width: 1.5em;
+        min-height: 1.5em;
+    }
+
+    #collectedToadsBox {
+        display: none;
+    }
+
+    .nav-hero-separator,
+    .banner-hero-separator,
+    .solid-separator-top,
+    .hero-images-spacing,
+    .banner-images-spacing {
+        display: none !important;
+        height: 0 !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        border: none !important;
+    }
+
+    .desktop-banner-container {
+        display: block;
+        margin-top: 20px; /* Add space between header and banner in tablet view */
+    }
+    .mobile-banner-container {
+        display: none;
+    }
+
+    .hero-image-row {
+        flex-direction: row;
+    }
+    .hero-image-box {
+        width: auto;
+        margin: 0;
+    }
+    .gallery-grid {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        padding: 30px 5vw 40px 5vw;
+    }
+    .footer-social-links {
+        flex-direction: row;
+        gap: 16px;
+    }
+    .footer-social-link {
+        font-size: 0.9rem;
+    }
+}
 
 
     @media (max-width: 700px) {
