--- a/index.html
+++ b/index.html
@@ -813,8 +813,8 @@
         margin-left: 0; /* No explicit margin needed here */
         margin-right: 0; /* No explicit margin needed here */
         align-self: end; /* IMPORTANT: Align to the bottom of its grid cell */
-        border: 5px solid #FFFFFF;
-        padding: 5px;
+        border: 4px solid #FFFFFF; /* Adjusted border to match desktop */
+        padding: 4px; /* Adjusted padding to match desktop */
         background-color: rgba(255, 255, 255, 0.1);
         box-sizing: border-box;
         transition: min-height 0.3s ease-out;
