--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
         margin-right: 0;
         margin-top: 0;
         margin-bottom: 0;
-        align-self: start; /* Ensure logo stays at the top of its grid cell */
+        align-self: center; /* Ensure logo is vertically centered within its cell */
     }
 
     .logo-circle {
@@ -810,6 +810,7 @@
         width: 200px; /* Fixed width */
         height: auto; /* Allow height to be determined by content or min-height */
         min-height: 40px; /* Initial small height like a button in tablet view */
+        /* UPDATED: Set a max-height to ensure it only expands for 3 rows of toads */
         max-height: 150px; 
         margin-left: 0; /* No explicit margin needed here */
         margin-right: 0; /* No explicit margin needed here */
@@ -819,6 +820,7 @@
         background-color: rgba(255, 255, 255, 0.1);
         box-sizing: border-box;
         transition: min-height 0.3s ease-out;
+        position: relative;
     }
 
     /* Ensure the grid and counter adapt within the flex container */
@@ -829,7 +831,6 @@
         width: 100%;
         flex-grow: 1;
         align-content: start;
-        overflow: hidden;
     }
 
     #desktopToadsGrid .hopped-toad {
@@ -839,10 +840,10 @@
     }
 
     #desktopToadCounter {
-        /* UPDATED: Ensure counter is always visible at the bottom of the flex container */
-        position: static;
-        margin-top: auto;
-        margin-left: auto;
+        position: absolute;
+        bottom: 4px; /* Match the padding of the parent container */
+        right: 4px; /* Match the padding of the parent container */
+        margin: 0;
         padding: 0;
         font-size: 0.8rem;
         white-space: nowrap;
