--- a/index.html
+++ b/index.html
@@ -1004,6 +1004,7 @@
             margin-top: 50px; /* Minimal spacing under the logo */
             margin-left: 0; /* Align to the left of the logo column */
             margin-right: auto; /* Keep it aligned left */
+            border: 6px solid #FFFFFF;
         }
 
         .hero-nav-col {
