--- a/index.html
+++ b/index.html
@@ -841,6 +841,7 @@
 
     #desktopToadCounter {
         position: absolute;
+        top: 4px;
         bottom: 4px; /* Match the padding of the parent container */
         right: 4px; /* Match the padding of the parent container */
         margin: 0;
