--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
     }
 
     /* NEW MEDIA QUERY: Tablet / Small Desktop (701px to 1024px) */
-   @media (min-width: 701px) and (max-width: 1024px) {
+   @media (max-width: 1024px) {
     html, body {
         font-size: 15px; /* Adjust base font size for better scaling */
     }
@@ -789,7 +789,8 @@
         grid-area: logo; /* Assign to the 'logo' area */
         margin-right: 0;
         margin-top: 0;
-        margin-bottom: 0;
+        /* UPDATED: Added margin to create space between the logo and toad box */
+        margin-bottom: 10px;
         align-self: center; /* Ensure logo is vertically centered within its cell */
     }
 
@@ -841,7 +842,7 @@
 
     #desktopToadCounter {
         position: absolute;
-        top: 4px;
+        /* UPDATED: Removed top: 4px to keep the counter at the bottom */
         bottom: 4px; /* Match the padding of the parent container */
         right: 4px; /* Match the padding of the parent container */
         margin: 0;
