--- a/index.html
+++ b/index.html
@@ -1006,6 +1006,7 @@
             margin-top: 50px; /* Minimal spacing under the logo */
             margin-left: 0; /* Align to the left of the logo column */
             margin-right: auto; /* Keep it aligned left */
+            border: 6px solid #FFFFFF;
         }
 
         .hero-nav-col {
@@ -1168,7 +1169,7 @@
             width: 100vw; /* Take full viewport width */
             aspect-ratio: 1 / 0.9;
             overflow: hidden;
-            margin: 0 0 10px 0; /* Align to edge, add bottom margin */
+            margin: 10px 0 10px 0; /* Align to edge, add bottom margin */
             border-radius: 0;
 
             /* APPLY THE WHITE BORDER HERE (to the container) */
